# lib-smalloc

./: .clang-format  CMakeLists.txt  PKGBUILD  README.md  smalloc.supp
cmake/: smallocConfig.cmake.in
include/smalloc/: smalloc.h  smalloc_result_t.h
include/smalloc/internal/: smalloc_flags.h  smalloc_guards.h  smalloc_internal.h  smalloc_mem_list.h  smalloc_mem_stack.h  smalloc_pointer_t.h  smalloc_result_t.h
src/: smalloc.c  smalloc_mem_list.c  smalloc_mem_stack.c  smalloc_pointer_t.c  smalloc_result_t.c
test/: test.c
